# evorca

./: .gitignore  README.md  pyproject.toml
evorca/: __init__.py  alphabet.py  cli.py  io_utils.py  model.py  post.py  viz.py
examples/: quickstart.ipynb
examples/msas/: fold_p02358_unpaired_msa_chains_a.a3m
tests/: test_evorca.py
tests/data/: tiny.a3m
